small css fix for spacing

--- a/src/sass/_song.scss
+++ b/src/sass/_song.scss
@@ -24,7 +24,7 @@
         margin-bottom: 0.5rem;
 
         .column {
-          margin-right: 0.1rem;
+          margin-right: 0.3rem;
 
           .chord {
             color: $clr-primary;
